[gd_scene load_steps=9 format=2]

[ext_resource path="res://imagens/mapa_principal/pixil-frame-0 (10).png" type="Texture" id=1]
[ext_resource path="res://fontes/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/mapa_principal/call_nathalia.gd" type="Script" id=3]
[ext_resource path="res://imagens/mini_games/mini_game_1/clique-no-bot√£o-com-o-ponteiro-manual-aqui-da-web-cursor-de-do-site-isolado-vetor-dedo-estoque-161010045-removebg-preview.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 935, -151 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "call"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.001, 0.29, 0.5, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.784314, 0.560784, 0.498039, 1 ), Color( 1, 1, 1, 1 ), Color( 0.784314, 0.560784, 0.498039, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 935, -151 ), Vector2( 930, 169 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 935, -151 )
scale = Vector2( 2.8, 3.07 )
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="Sprite"]
margin_left = -29.0
margin_top = -48.0
margin_right = 25.0
margin_bottom = 47.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/TextureButton"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/call = SubResource( 3 )
anims/slide = SubResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite"]
margin_left = -22.1447
margin_top = -26.2301
margin_right = 75.8553
margin_bottom = 16.7699
rect_rotation = 0.571965
custom_fonts/normal_font = SubResource( 1 )
text = "Nathalia"

[node name="descida" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="pisca" type="Timer" parent="."]
one_shot = true

[node name="clickButton" type="Sprite" parent="."]
visible = false
position = Vector2( 957, 292 )
scale = Vector2( 0.476708, 0.476708 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Sprite/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="descida" to="." method="_on_descida_timeout"]
[connection signal="timeout" from="pisca" to="." method="_on_pisca_timeout"]
